--- a/HelloWorldApp/src/app/app.component.html
+++ b/HelloWorldApp/src/app/app.component.html
@@ -1,2 +1,4 @@
 <h1>{{ message }}</h1>
+<img src="assets/BL_logo_square_jpg.jpg" alt="Logo " width="300px">
 
+<!-- <img [src]="logoPath" alt="BridgeLabz Logo"> -->
