[Shristy] Add.UC4 Functionality

--- a/HelloWorldApp/src/app/app.component.html
+++ b/HelloWorldApp/src/app/app.component.html
@@ -1,4 +1,7 @@
-<h1>{{ message }}</h1>
-<img src="assets/BL_logo_square_jpg.jpg" alt="Logo " width="300px">
 
-<!-- <img [src]="logoPath" alt="BridgeLabz Logo"> -->
+<img 
+  src="assets/BL_logo_square_jpg.jpg" 
+  alt="BridgeLabz Logo" 
+  (click)="openBridgeLabz()" 
+  style="cursor: pointer; width: 150px;"
+>
